--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Register Page</title>
 </head>
 <header>
@@ -11,7 +12,7 @@
     <a href="">Log In</a>
 </header>
 <body>
-    <div>
+    <div class="container"> 
         <h1>Sign up!</h1>
     <form>
         <div><input type="email" placeholder="Email" name="email"/></div>
@@ -20,13 +21,14 @@
         <div ><input type="password" placeholder="Confirm Password" name="confirmPassword"/></div>
         <button type="submit">Submit</button>
     </form>
-    </div>
-</body>
-<footer>
+    <footer>
     <img src="./Assets/amazonicon.png" alt="Amazon Icon" height="32" width="32">
     <img src="./Assets/facebookicon.png" alt="facebook Icon" height="32" width="32">
     <img src="./Assets/Github icon.png" alt="gitHUb Icon" height="32" width="32">
     <img src="./Assets/instagram icon.png" alt="Instagram icon" height="32" width="32">
     <img src="./Assets/slackicon.png" alt="Slack Icon" height="32" width="32">
 </footer>
+    </div>
+</body>
+
 </html>
